# gimpsep-team-9

./: CMakeLists.txt  Image.cpp  main.cpp
